# distribute_shell

./: .gitignore  DistributeShell.sln  DistributeShell.vcxproj  DistributeShell.vcxproj.filters  README.md  sasl_client.cpp
lib/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Connection.cpp  Connection.h  YarnRpcChannel.cpp  main.cpp  yarn-conf.xml
src/test/: AppClientProtocolServiceTest.cc  BlockingQueueTest.cc  CMakeLists.txt  ConnnectionTest.cpp  main.cpp
src/utils/: CMakeLists.txt  ResourceLock.h  const_variable.h
src/yarn_client/: CMakeLists.txt  Client.cpp  Client.h  Configure.cpp  Configure.h  Connection.cpp  Connection.h  UserGroupInformation.cpp  UserGroupInformation.h  YarnRpcChannel.cpp  YarnRpcChannel.h  YarnRpcRequest.cpp  YarnRpcRequest.h  common.h
src/yarn_client/service/: ApplicationClientProtocolService.cpp  ApplicationClientProtocolService.h  ApplicationMasterProtocolServiceImpl.cpp  ApplicationMasterProtocolServiceImpl.h
src/yarn_client/utils/: Base64.cpp  Base64.h  BlockingQueue.cc  ByteUtils.h  CMakeLists.txt  ConcurrentMap.h  ConvertUtils.h  ProtobufUtils.h  ResourceLock.cpp  SASLClient.cpp  SASLClient.h  blocking_list.h  const_variable.h
src/yarn_client/yarn_protocal/: applicationclient_protocol.pb.cc  applicationmaster_protocol.pb.cc  yarn_protos.pb.cc  yarn_protos.pb.h  yarn_service_protos.pb.cc
src/yarn_protocal/: CMakeLists.txt  applicationclient_protocol.pb.h  applicationmaster_protocol.pb.h  containermanagement_protocol.pb.cc  containermanagement_protocol.pb.h  yarn_service_protos.pb.h
