CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

#SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
AUX_SOURCE_DIRECTORY(yarn_protocal YARN_PROTOCAL_SRC)
ADD_SUBDIRECTORY(utils)
AUX_SOURCE_DIRECTORY(. SRC)

ADD_LIBRARY(yarnclient ${SRC} ${YARN_PROTOCAL_SRC})
TARGET_LINK_LIBRARIES(yarnclient utils tinyxml2 protobuf pthread log4cplus)

